--- a/css/style.css
+++ b/css/style.css
@@ -65,7 +65,7 @@ body {
     background-color: var(--hover-color);
 }
 
-.greeting-message {
+.greeting-message, .study-message {
     margin-top: 20px;
     font-size: 1.2rem;
     color: #212121;
