feat: :sparkles: Agregar ejercicio 5 (parte 1) - Clase Figura
Se ha agregado el ejercicio 5 (parte 1) de Programación Orientada a Objetos (POO) en JavaScript, que consiste en crear una clase Figura con propiedades y un método para calcular el área.

--- a/css/variables.css
+++ b/css/variables.css
@@ -1,5 +1,5 @@
 :root {
-    --primary-color: #FF5722;
-    --hover-color: #E64A19;
-    --font-family: 'Roboto', sans-serif;
+    --primary-color: #6200ea;
+    --hover-color: #3700b3;
+    --font-family: 'Arial', sans-serif;
 }
